# src/types/swagger_option.ts
@@ -5,5 +5,37 @@ export type SwaggerOption = {
     appInfo: ApplicationInfo;
     servers: ServerInfo[];
     outputPath: string;
-    srcPath: string;
+    securitySchemes?: {
+        basicAuth?: {
+            type: "http";
+            scheme: "basic";
+        };
+        bearerAuth?: {
+            type: "http";
+            scheme: "bearer";
+        };
+        apiKeyAuth?: {
+            type: "apiKey";
+            in: string;
+            name: string;
+        };
+        openID?: {
+            type: "openIdConnect";
+            openIdConnectUrl: string;
+        };
+        oAuth2?: {
+            type: "oauth2";
+            flows: {
+                authorizationCode: {
+                    authorizationUrl: string;
+                    tokenUrl: string;
+                    scopes: {
+                        read: string;
+                        write: string;
+                        admin: string;
+                    };
+                };
+            };
+        };
+    } | any
 }
